# scanners-and-such

./: Cargo.toml  README.md
.github/workflows/: publish.yaml
examples/: hid-pos.rs  snapi-devices.rs  snapi-list-devices.rs
src/: lib.rs
src/scanner/: hid_pos.rs  mod.rs  snapi.rs
src/scanner/snapi/: code_types.rs  mod.rs  packet.rs
src/transports/: mod.rs
src/transports/hid/: mod.rs  native.rs  web.rs
src/transports/usb/: mod.rs  native.rs  web.rs
web/: Cargo.toml  README.md
web/src/: lib.rs
