[package]
name = "scanners-and-such"
version = "0.1.0"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]

[workspace]
members = [".", "web"]

[features]
default = []

hid = ["async-hid"]
usb = []

snapi = ["hid", "usb"]

runtime-smol = ["smol"]
runtime-tokio = ["tokio"]

web = ["tsify", "wasm-bindgen"]

[dependencies]
async-trait = "0.1.89"
futures = { version = "0.3.31", default-features = false, features = [
    "alloc",
    "async-await",
    "std",
] }
hex = "0.4.3"
itertools = "0.14.0"
num_enum = { version = "0.7.5" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tsify = { version = "0.5.6", optional = true, features = ["js"] }
wasm-bindgen = { version = "0.2.104", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-hid = { version = "0.4.4", optional = true, default-features = false, features = [
    "async-io",
    "winrt",
] }
smol = { version = "2.0.2", optional = true }
tokio = { version = "1.48.0", optional = true, features = ["rt"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = [
    "Event",
    "Hid",
    "HidDevice",
    "HidDeviceRequestOptions",
    "HidInputReportEvent",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "Window",
] }

[dev-dependencies]
tracing-subscriber = "0.3"
smol = "2.0.2"
tracing-test = "0.2.5"

[[example]]
name = "snapi-devices"
path = "examples/snapi-devices.rs"
required-features = ["snapi", "runtime-smol"]
