[package]
name = "scanners-and-such-web"
version = "0.1.0"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
scanners-and-such = { path = "../", features = ["snapi"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "fmt"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
