[package]
name = "scanners-and-such-web"
version = "0.1.0"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[features]
logging = ["console_error_panic_hook", "tracing-subscriber", "tracing-web"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.31"
scanners-and-such = { path = "../", features = ["snapi", "web", "hid-pos"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", optional = true, default-features = false, features = [
    "ansi",
    "fmt",
] }
tracing-web = { version = "0.1.3", optional = true }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["HidDevice"] }
